# cc-session-explorer

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: publish.yml
frontend/: package-lock.json  package.json
frontend/app/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/app/src/: App.tsx  Sankey.tsx  api.ts  app.css  main.tsx  nav.tsx  queryClient.ts  routes.ts  shared.tsx
frontend/app/src/components/: UsageTable.tsx  columns.tsx
frontend/app/src/pages/: BucketDetail.tsx  Data.tsx  Live.tsx  LiveFeed.tsx  Models.tsx  Overview.tsx  Projects.tsx  Sessions.tsx  Time.tsx
frontend/app/src/pages/context/: Ledger.tsx  ProjectDetail.tsx  Projects.tsx  SessionDetail.tsx  Sessions.tsx  shared.tsx
frontend/ui/: .gitignore  package.json  vite.config.ts
frontend/ui/demo/: index.html  main.tsx
frontend/ui/src/: export.ts  format.ts  index.ts  types.ts
frontend/ui/src/components/: BarChart.tsx  Breadcrumbs.tsx  Button.tsx  Card.tsx  DataTable.tsx  EmptyState.tsx  ExportButtons.tsx  FilterableTable.tsx  Input.tsx  JsonView.tsx  KpiCard.tsx  LinkButton.tsx  LoadingState.tsx  Pagination.tsx  Pill.tsx  Root.tsx  SankeyChart.tsx  SegmentedControl.tsx  Sidebar.tsx  Spinner.tsx  StatBar.tsx
frontend/ui/src/styles/: base.css  tokens.css
launchd/: com.cc-session-explorer.dashboard.plist  com.cc-session-explorer.watch.plist
monitors/: monitors.json
src/cc_session_explorer/: __init__.py  base.py  buckets.py  export_timeline.py  paths.py  timeline.py  tokens.py  types.py  webapp.py
src/cc_session_explorer/api/: __init__.py  deps.py  router.py  settings.py
src/cc_session_explorer/history/: __init__.py  cli.py  pricing.py
src/cc_session_explorer/ingest/: __init__.py  db.py  ingest.py  kinds.py  rollup.py  types.py  usage.py  watch.py
src/cc_session_explorer/mcp/: __init__.py  server.py
src/cc_session_explorer/models/: __init__.py  timeline.py  types.py
src/cc_session_explorer/static/: index.html
src/cc_session_explorer/usage/: __init__.py  aggregate.py  livelog.py  models.py  router.py  scan.py  transcript.py
src/cc_session_explorer/viz/: __init__.py  cli.py  htmlshell.py  ledger.py  sankey.py  types.py
systemd/: cc-session-explorer.service  cc-session-explorer.socket  cc-session-watch.service
tests/: _transcripts.py  test_breakdown.py  test_export_timeline.py  test_ledger.py  test_pricing.py  test_timeline.py  test_transcripts_ingest.py  test_transcripts_watch.py  test_usage_aggregate.py  test_webapp.py
tests/api/: test_breakdown_routes.py  test_export_routes.py  test_livelog_routes.py  test_timeline_routes.py  test_usage_routes.py
tests/mcp/: test_mcp_tools.py
