[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-session-explorer"
version = "0.1.0"
description = "Replays Claude Code session transcripts and Claude.ai exports as context-token timelines, ledgers, and project breakdowns — a FastAPI service over cc-session-core."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Magic-Man-us" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "cc-session-core>=0.1.0,<0.2.0",
    "fastapi>=0.115",
    "mcp>=1.28",
    "pydantic>=2.11",
    "pydantic-settings>=2.4",
    "tiktoken>=0.13.0",
    "uvicorn>=0.30",
    "watchfiles>=1.2.0",
]

[project.scripts]
cc-session-explorer = "cc_session_explorer.webapp:main"
cc-session-sankey = "cc_session_explorer.viz.cli:main"
cc-session-ledger = "cc_session_explorer.viz.ledger:main"
cc-session-watch = "cc_session_explorer.ingest.watch:main"
cc-session-history = "cc_session_explorer.history.cli:main"
cc-session-explorer-mcp = "cc_session_explorer.mcp.server:main"

[project.urls]
Repository = "https://github.com/Magic-Man-us/cc-session-explorer"
Issues = "https://github.com/Magic-Man-us/cc-session-explorer/issues"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27", "pyright>=1.1.390"]

[tool.hatch.build.targets.wheel]
packages = ["src/cc_session_explorer"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

# starlette.testclient.TestClient.get/.post carry a mypy-only `# type: ignore[override]`
# that pyright doesn't honor the same way, so it resolves as Unknown rather than the
# suppressed override — every `client.get(...).json()` chain in the API tests then
# cascades into reportUnknown*. reportPrivateUsage is relaxed too: whitebox tests of
# module-private caches (e.g. _KINDS_CACHE's eviction) have no public accessor to test
# through. Relaxed for tests only; src stays fully strict.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportPrivateUsage = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
